Compiladores/src/utils/y.output
   0  $accept : programa $end

   1  programa : bloque

   2  bloque : sentencia
   3         | '{' sentencias '}'

   4  sentencias : sentencia
   5             | sentencias sentencia

   6  sentencia : declaracion
   7            | bucle
   8            | impresion
   9            | asignacion ';'
  10            | seleccion

  11  declaracion : FLOAT variables
  12              | ARRAY arreglo ';'

  13  variables : IDENTIFICADOR ';'
  14            | variables ',' IDENTIFICADOR

  15  arreglo : IDENTIFICADOR '[' expresion ']'

  16  seleccion : IF '(' condicion ')' THEN bloque
  17            | IF '(' condicion ')' bloque_then ELSE bloque_else

  18  bloque_then : bloque

  19  bloque_else : bloque

  20  condicion : argumento comparador argumento

  21  comparador : '<'
  22             | '>'
  23             | '='
  24             | MENOR_IGUAL
  25             | MAYOR_IGUAL

  26  bucle : WHILE '(' condicion ')' DO bloque

  27  impresion : PRINT '(' CADENA ')' ';'
  28            | PRINT '(' CADENA ')' argumento
  29            | PRINT '(' CADENA ';'
  30            | PRINT ';'

  31  asignacion : IDENTIFICADOR ASIG expresion
  32             | IDENTIFICADOR '[' expresion ']' ASIG expresion

  33  expresion : expresion '+' termino
  34            | expresion '-' termino
  35            | termino

  36  termino : termino '*' argumento
  37          | termino '/' argumento
  38          | argumento

  39  num : '-' NUMERO
  40      | NUMERO

  41  argumento : IDENTIFICADOR
  42            | num
  43            | IDENTIFICADOR '[' expresion ']'

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'{'  shift 7
	.  error

	programa  goto 8
	bloque  goto 9
	sentencia  goto 10
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15


state 1
	asignacion : IDENTIFICADOR . ASIG expresion  (31)
	asignacion : IDENTIFICADOR . '[' expresion ']' ASIG expresion  (32)

	ASIG  shift 16
	'['  shift 17
	.  error


state 2
	declaracion : FLOAT . variables  (11)

	IDENTIFICADOR  shift 18
	.  error

	variables  goto 19


state 3
	seleccion : IF . '(' condicion ')' THEN bloque  (16)
	seleccion : IF . '(' condicion ')' bloque_then ELSE bloque_else  (17)

	'('  shift 20
	.  error


state 4
	bucle : WHILE . '(' condicion ')' DO bloque  (26)

	'('  shift 21
	.  error


state 5
	impresion : PRINT . '(' CADENA ')' ';'  (27)
	impresion : PRINT . '(' CADENA ')' argumento  (28)
	impresion : PRINT . '(' CADENA ';'  (29)
	impresion : PRINT . ';'  (30)

	';'  shift 22
	'('  shift 23
	.  error


state 6
	declaracion : ARRAY . arreglo ';'  (12)

	IDENTIFICADOR  shift 24
	.  error

	arreglo  goto 25


state 7
	bloque : '{' . sentencias '}'  (3)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	.  error

	sentencia  goto 26
	sentencias  goto 27
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15


state 8
	$accept : programa . $end  (0)

	$end  accept


state 9
	programa : bloque .  (1)

	.  reduce 1


state 10
	bloque : sentencia .  (2)

	.  reduce 2


state 11
	sentencia : declaracion .  (6)

	.  reduce 6


state 12
	sentencia : bucle .  (7)

	.  reduce 7


state 13
	sentencia : impresion .  (8)

	.  reduce 8


state 14
	sentencia : asignacion . ';'  (9)

	';'  shift 28
	.  error


state 15
	sentencia : seleccion .  (10)

	.  reduce 10


state 16
	asignacion : IDENTIFICADOR ASIG . expresion  (31)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	expresion  goto 32
	argumento  goto 33
	termino  goto 34
	num  goto 35


state 17
	asignacion : IDENTIFICADOR '[' . expresion ']' ASIG expresion  (32)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	expresion  goto 36
	argumento  goto 33
	termino  goto 34
	num  goto 35


state 18
	variables : IDENTIFICADOR . ';'  (13)

	';'  shift 37
	.  error


state 19
	declaracion : FLOAT variables .  (11)
	variables : variables . ',' IDENTIFICADOR  (14)

	','  shift 38
	$end  reduce 11
	IDENTIFICADOR  reduce 11
	FLOAT  reduce 11
	IF  reduce 11
	ELSE  reduce 11
	WHILE  reduce 11
	PRINT  reduce 11
	ARRAY  reduce 11
	'}'  reduce 11


state 20
	seleccion : IF '(' . condicion ')' THEN bloque  (16)
	seleccion : IF '(' . condicion ')' bloque_then ELSE bloque_else  (17)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	condicion  goto 39
	argumento  goto 40
	num  goto 35


state 21
	bucle : WHILE '(' . condicion ')' DO bloque  (26)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	condicion  goto 41
	argumento  goto 40
	num  goto 35


state 22
	impresion : PRINT ';' .  (30)

	.  reduce 30


state 23
	impresion : PRINT '(' . CADENA ')' ';'  (27)
	impresion : PRINT '(' . CADENA ')' argumento  (28)
	impresion : PRINT '(' . CADENA ';'  (29)

	CADENA  shift 42
	.  error


state 24
	arreglo : IDENTIFICADOR . '[' expresion ']'  (15)

	'['  shift 43
	.  error


state 25
	declaracion : ARRAY arreglo . ';'  (12)

	';'  shift 44
	.  error


state 26
	sentencias : sentencia .  (4)

	.  reduce 4


state 27
	bloque : '{' sentencias . '}'  (3)
	sentencias : sentencias . sentencia  (5)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'}'  shift 45
	.  error

	sentencia  goto 46
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15


state 28
	sentencia : asignacion ';' .  (9)

	.  reduce 9


state 29
	argumento : IDENTIFICADOR .  (41)
	argumento : IDENTIFICADOR . '[' expresion ']'  (43)

	'['  shift 47
	$end  reduce 41
	IDENTIFICADOR  reduce 41
	FLOAT  reduce 41
	IF  reduce 41
	ELSE  reduce 41
	WHILE  reduce 41
	PRINT  reduce 41
	ARRAY  reduce 41
	MAYOR_IGUAL  reduce 41
	MENOR_IGUAL  reduce 41
	'}'  reduce 41
	';'  reduce 41
	']'  reduce 41
	')'  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	'='  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41


state 30
	num : NUMERO .  (40)

	.  reduce 40


state 31
	num : '-' . NUMERO  (39)

	NUMERO  shift 48
	.  error


state 32
	asignacion : IDENTIFICADOR ASIG expresion .  (31)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	'+'  shift 49
	'-'  shift 50
	';'  reduce 31


state 33
	termino : argumento .  (38)

	.  reduce 38


state 34
	expresion : termino .  (35)
	termino : termino . '*' argumento  (36)
	termino : termino . '/' argumento  (37)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 35
	']'  reduce 35
	'+'  reduce 35
	'-'  reduce 35


state 35
	argumento : num .  (42)

	.  reduce 42


state 36
	asignacion : IDENTIFICADOR '[' expresion . ']' ASIG expresion  (32)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	']'  shift 53
	'+'  shift 49
	'-'  shift 50
	.  error


state 37
	variables : IDENTIFICADOR ';' .  (13)

	.  reduce 13


state 38
	variables : variables ',' . IDENTIFICADOR  (14)

	IDENTIFICADOR  shift 54
	.  error


state 39
	seleccion : IF '(' condicion . ')' THEN bloque  (16)
	seleccion : IF '(' condicion . ')' bloque_then ELSE bloque_else  (17)

	')'  shift 55
	.  error


state 40
	condicion : argumento . comparador argumento  (20)

	MAYOR_IGUAL  shift 56
	MENOR_IGUAL  shift 57
	'<'  shift 58
	'>'  shift 59
	'='  shift 60
	.  error

	comparador  goto 61


state 41
	bucle : WHILE '(' condicion . ')' DO bloque  (26)

	')'  shift 62
	.  error


state 42
	impresion : PRINT '(' CADENA . ')' ';'  (27)
	impresion : PRINT '(' CADENA . ')' argumento  (28)
	impresion : PRINT '(' CADENA . ';'  (29)

	';'  shift 63
	')'  shift 64
	.  error


state 43
	arreglo : IDENTIFICADOR '[' . expresion ']'  (15)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	expresion  goto 65
	argumento  goto 33
	termino  goto 34
	num  goto 35


state 44
	declaracion : ARRAY arreglo ';' .  (12)

	.  reduce 12


state 45
	bloque : '{' sentencias '}' .  (3)

	.  reduce 3


state 46
	sentencias : sentencias sentencia .  (5)

	.  reduce 5


state 47
	argumento : IDENTIFICADOR '[' . expresion ']'  (43)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	expresion  goto 66
	argumento  goto 33
	termino  goto 34
	num  goto 35


state 48
	num : '-' NUMERO .  (39)

	.  reduce 39


state 49
	expresion : expresion '+' . termino  (33)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	argumento  goto 33
	termino  goto 67
	num  goto 35


state 50
	expresion : expresion '-' . termino  (34)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	argumento  goto 33
	termino  goto 68
	num  goto 35


state 51
	termino : termino '*' . argumento  (36)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	argumento  goto 69
	num  goto 35


state 52
	termino : termino '/' . argumento  (37)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	argumento  goto 70
	num  goto 35


state 53
	asignacion : IDENTIFICADOR '[' expresion ']' . ASIG expresion  (32)

	ASIG  shift 71
	.  error


state 54
	variables : variables ',' IDENTIFICADOR .  (14)

	.  reduce 14


state 55
	seleccion : IF '(' condicion ')' . THEN bloque  (16)
	seleccion : IF '(' condicion ')' . bloque_then ELSE bloque_else  (17)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	THEN  shift 72
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'{'  shift 7
	.  error

	bloque  goto 73
	sentencia  goto 10
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15
	bloque_then  goto 74


state 56
	comparador : MAYOR_IGUAL .  (25)

	.  reduce 25


state 57
	comparador : MENOR_IGUAL .  (24)

	.  reduce 24


state 58
	comparador : '<' .  (21)

	.  reduce 21


state 59
	comparador : '>' .  (22)

	.  reduce 22


state 60
	comparador : '=' .  (23)

	.  reduce 23


state 61
	condicion : argumento comparador . argumento  (20)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	argumento  goto 75
	num  goto 35


state 62
	bucle : WHILE '(' condicion ')' . DO bloque  (26)

	DO  shift 76
	.  error


state 63
	impresion : PRINT '(' CADENA ';' .  (29)

	.  reduce 29


state 64
	impresion : PRINT '(' CADENA ')' . ';'  (27)
	impresion : PRINT '(' CADENA ')' . argumento  (28)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	';'  shift 77
	'-'  shift 31
	.  error

	argumento  goto 78
	num  goto 35


state 65
	arreglo : IDENTIFICADOR '[' expresion . ']'  (15)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	']'  shift 79
	'+'  shift 49
	'-'  shift 50
	.  error


state 66
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)
	argumento : IDENTIFICADOR '[' expresion . ']'  (43)

	']'  shift 80
	'+'  shift 49
	'-'  shift 50
	.  error


state 67
	expresion : expresion '+' termino .  (33)
	termino : termino . '*' argumento  (36)
	termino : termino . '/' argumento  (37)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 33
	']'  reduce 33
	'+'  reduce 33
	'-'  reduce 33


state 68
	expresion : expresion '-' termino .  (34)
	termino : termino . '*' argumento  (36)
	termino : termino . '/' argumento  (37)

	'*'  shift 51
	'/'  shift 52
	';'  reduce 34
	']'  reduce 34
	'+'  reduce 34
	'-'  reduce 34


state 69
	termino : termino '*' argumento .  (36)

	.  reduce 36


state 70
	termino : termino '/' argumento .  (37)

	.  reduce 37


state 71
	asignacion : IDENTIFICADOR '[' expresion ']' ASIG . expresion  (32)

	IDENTIFICADOR  shift 29
	NUMERO  shift 30
	'-'  shift 31
	.  error

	expresion  goto 81
	argumento  goto 33
	termino  goto 34
	num  goto 35


state 72
	seleccion : IF '(' condicion ')' THEN . bloque  (16)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'{'  shift 7
	.  error

	bloque  goto 82
	sentencia  goto 10
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15


state 73
	bloque_then : bloque .  (18)

	.  reduce 18


state 74
	seleccion : IF '(' condicion ')' bloque_then . ELSE bloque_else  (17)

	ELSE  shift 83
	.  error


state 75
	condicion : argumento comparador argumento .  (20)

	.  reduce 20


state 76
	bucle : WHILE '(' condicion ')' DO . bloque  (26)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'{'  shift 7
	.  error

	bloque  goto 84
	sentencia  goto 10
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15


state 77
	impresion : PRINT '(' CADENA ')' ';' .  (27)

	.  reduce 27


state 78
	impresion : PRINT '(' CADENA ')' argumento .  (28)

	.  reduce 28


state 79
	arreglo : IDENTIFICADOR '[' expresion ']' .  (15)

	.  reduce 15


state 80
	argumento : IDENTIFICADOR '[' expresion ']' .  (43)

	.  reduce 43


state 81
	asignacion : IDENTIFICADOR '[' expresion ']' ASIG expresion .  (32)
	expresion : expresion . '+' termino  (33)
	expresion : expresion . '-' termino  (34)

	'+'  shift 49
	'-'  shift 50
	';'  reduce 32


state 82
	seleccion : IF '(' condicion ')' THEN bloque .  (16)

	.  reduce 16


state 83
	seleccion : IF '(' condicion ')' bloque_then ELSE . bloque_else  (17)

	IDENTIFICADOR  shift 1
	FLOAT  shift 2
	IF  shift 3
	WHILE  shift 4
	PRINT  shift 5
	ARRAY  shift 6
	'{'  shift 7
	.  error

	bloque  goto 85
	sentencia  goto 10
	declaracion  goto 11
	bucle  goto 12
	impresion  goto 13
	asignacion  goto 14
	seleccion  goto 15
	bloque_else  goto 86


state 84
	bucle : WHILE '(' condicion ')' DO bloque .  (26)

	.  reduce 26


state 85
	bloque_else : bloque .  (19)

	.  reduce 19


state 86
	seleccion : IF '(' condicion ')' bloque_then ELSE bloque_else .  (17)

	.  reduce 17


32 terminals, 20 nonterminals
44 grammar rules, 87 states
